# local-package-installer

./: LICENSE  README.md  pyproject.toml
docs/: conf.py
src/local_package_installer/: local_package_installer.py
